--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "name": "Rich Cheng",
     "email": "rich@richcheng.com",
     "url": "http://www.richcheng.com/"
-  },  
+  },
   "version": "0.0.1",
   "license": "MIT",
   "angular-cli": {},
@@ -29,10 +29,17 @@
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.18",
+    "@types/lodash": "^4.14.52",
+    "angular2-jwt": "^0.1.28",
+    "angular2-moment": "^1.1.0",
     "angularfire2": "^2.0.0-beta.7",
+    "auth0-lock": "^10.11.0",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "firebase": "^3.6.6",
+    "lodash": "^4.17.4",
+    "moment": "^2.17.1",
+    "ngx-toastr": "^4.2.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
@@ -50,9 +57,11 @@
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
+    "npm": "^4.1.2",
     "protractor": "~4.0.13",
     "ts-node": "1.2.1",
     "tslint": "^4.3.0",
-    "typescript": "~2.0.3"
+    "typescript": "~2.0.3",
+    "webpack": "^2.2.0"
   }
 }
